@@ -1,3 +1,5 @@
+2005-04-26 François Proulx <francois.proulx@gmail.com>
+	* Fixed wrong location for change password link
 2005-04-25 François Proulx <francois.proulx@gmail.com>
 	* Portal page styling
 	
